Refactoring OpeningHoursRepositoryTest for method getRandomizedOpeningHoursRuleEntityWithNameNotInList() to improve and fix code.